2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* trace.h (trace_buffer_dump): Take additional arguments func and
	line.  Print them.
	(trace_buffer_dump): Also define as a macro.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* cap.h (struct cap): Make priority signed.

2008-11-04  Neal H. Walfield  <neal@gnu.org>

	* cap.h (OBJECT_PRIORITY_BITS): Change to 7.
	(OBJECT_PRIORITY_LEVELS): Define.
	(OBJECT_PRIORITY_LRU): Don't define.  Update users.
	(struct object_policy): Remove field pad0.  Change to a uint8_t.
	(OBJECT_POLICY): Update.

2008-08-16  Neal H. Walfield  <neal@gnu.org>

	* thread.h (thread_start_sp_ip): New function.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (ss_mutex_lock): Only complain about a possible deadlock
	if ERRNO is EDEADLK.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy_x): Also call cap_shootdown if the version field
	changes.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* activity.h (ACTIVITY_MEMORY_POLICY): Reverse argument order.
	(struct activity_memory_policy): Reverse order of fields.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_stats): Don't define.
	(RM_activity_info): Replace with this.
	(struct activity_stats): Add field pressure_local.  Make field
	pressure an 8 bit integer.
	(struct activity_stats_buffer): Remove structure.
	(struct activity_info): Replace with this structure.
	(activity_info_stats): Define.
	(activity_info_pressure): Likewise.
	(activity_stats): Remove method.
	(activity_info): Replace with this.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (do_debug): If DEBUG_ELIDE is defined to an integer,
	statically exclude those debug statements that have a level
	greater than or equal to it.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_name): Define.
	(struct object_name): New struct.
	(object_name): New method.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_discard): New define.