@@ -1,3 +1,8 @@
+2008-11-14  Neal H. Walfield  <neal@gnu.org>
+
+	* rpc.h: Include <l4/space.h>.
+	(RPC_): When receiving a message, accept any mapping.
+
 2008-11-12  Neal H. Walfield  <neal@gnu.org>
 
 	* trace.h (trace_buffer_dump): Take additional arguments func and
